# obsidian-trading-tracker

./: .gitignore  .traderc.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
schema/: 001_initial.sql  003_multi_currency.sql  004_instrument_in_closed.sql
src/trading_tracker/: __init__.py  analytics.py  cli.py  config.py  db.py  models.py  sync.py
src/trading_tracker/schema/: 001_initial.sql  002_shorts_leverage.sql
src/trading_tracker/templates/: daily_log.md.j2  position_note.md.j2
tests/: conftest.py  test_analytics.py  test_cli.py  test_db.py  test_e2e_real_trades.py  test_multi_currency.py
